WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116123
[wk2] Not updating tiled backing coverage when main frame scrollability changes
https://bugs.webkit.org/show_bug.cgi?id=116123
Summary
[wk2] Not updating tiled backing coverage when main frame scrollability changes
Tim Horton
Reported
2013-05-14 13:00:00 PDT
<
rdar://problem/13836559
>
Attachments
patch
(7.53 KB, patch)
2013-05-14 16:45 PDT
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2013-05-14 13:01:21 PDT
This means that we can get stuck in limited-overdraw state even in our expand-view-to-content-size mode.
Tim Horton
Comment 2
2013-05-14 16:45:32 PDT
Created
attachment 201770
[details]
patch
Tim Horton
Comment 3
2013-05-14 17:36:31 PDT
http://trac.webkit.org/changeset/150093
Tim Horton
Comment 4
2013-05-15 11:34:50 PDT
Comment on
attachment 201770
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=201770&action=review
> Source/WebCore/WebCore.exp.in:1157 > +__ZN7WebCore9FrameView26adjustTiledBackingCoverageEv
words to test a crash
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug